syntax = "proto3";
package pb;

service GetScore {
    rpc GetScore (GetScoreRequest) returns (GetScoreReply) {}
}

service PutScore {
    rpc PutScore (PutScoreRequest) returns (GeneralReply) {}
}

message GetScoreRequest {
    string Game = 1;
}

message GetScoreReply {
    repeated int32 Home = 1;
    int32 HomeTotal = 2;
    repeated int32 Visitor = 3;
    int32 VisitorTotal = 4;
}

message PutScoreRequest {
    string Game = 1;
    enum TeamType {
        Home = 0;
        Visitor = 1;
      }
    TeamType Team = 2;
    int32 Round = 3;
    int32 Add = 4;
}

message GeneralReply {
    string Result = 1;
}

